# liversegbyasm

./: CMakeLists.txt  LiverSegmentation.cpp  LiverSegmentationAPI.cpp  LiverSegmentationAPI.h  LiverSegmentationAPI_Export.h  ProcessForAdboost.cpp  README.txt  TestAdaboostClassifer.cpp
BuildingModel/: BuildStatisticalAppearanceModel.cpp  BuildStatisticalPoseModel.cpp  BuildStatisticalShapeModel.cpp  CMakeLists.txt
CMake/: FindANN.cmake
Data/: config.txt  urls.txt
ModelViewer/: main.cpp
Modules/ACVD/: CMakeLists.txt
Modules/ACVD/Common/: CMakeLists.txt
Modules/ACVD/DiscreteRemeshing/: CMakeLists.txt
Modules/AdaSegment/: AdaBoost.h  AdaSegmentAPI.h  CHANGES  CMakeLists-bak.txt  CMakeLists.txt  ExtractFeatures.cpp  itkBox2SumImageFilter.hxx  itkBox2Utilities.h  test.cxx
Modules/AdaSegment/ImageSamplers/: itkImageSamplerBase.txx
Modules/AdaSegment/bak/: AdaLearn.cxx  AdaSegment2D.cxx
Modules/AdaSegment/cmake/: GenerateAdaSegmentConfig.cmake
Modules/ModelViewer/: CMakeLists.txt  ModelViewer.cpp  ModelViewer.h  ModelViewer.ui  main.cpp
Modules/itkAuxiliary/: itkAdaptSimplexMesh3DFilter.h  itkCorrespondingPointsEuclideanDistancePointMetric.h  itkCorrespondingPointsEuclideanDistancePointMetric.hxx  itkDeformableSimplexMesh3DICPForceFilter.hxx  itkDeformableSimplexMesh3DWithShapePriorFilter.h  itkDeformableSimplexMesh3DWithShapePriorFilter.hxx  itkEuclideanDistanceKdTreeMultipleValuePointSetMetric.h  itkEuclideanDistanceKdTreeMultipleValuePointSetMetric.hxx  itkEuclideanDistanceMultipleValuePointMetric.hxx  itkExtract2DSliceFilter.h  itkExtract2DSliceFilter.hxx  itkMinValuePointSetToImageMetric.hxx  itkMinValuePointSetToImageMultipleValueMetric.h  itkMinValuePointSetToImageMultipleValueMetric.hxx  itkMinimumValueImageToPointSetMetric.h  itkSimplexMeshGeometry.h  itkSimplexMeshToTriangleMeshFilter2.h  itkSimplexMeshToTriangleMeshFilter2.hxx
Modules/kmCommon/: CMakeLists.txt  kmAlgorithm.h  kmClassifierUtils.h  kmCommon.h  kmGlobal.cpp  kmGlobal.h  kmHistogram.h  kmMath.h  kmModelFitting.h-useless  kmNotifierBase.h  kmProcessing.h  kmProfileClassifier.h  kmProfileContainer.h  kmProfileExtractor.h  kmRegistration.h  kmSSMUtils.h  kmSSMUtils.hxx  kmSegmentation.h  kmUtility.cpp  kmUtility.h  kmVtkItkUtility.cpp  kmVtkItkUtility.h
Modules/statismo/Representers/ITK/: itkVectorSimplexMeshRepresenter.h
Modules/statismo/statismo/: DataManagerWithSurrogates.txx  HDF5Utils.cxx  utils.h
Modules/statismo/statismo_ITK/: itkStatisticalModelTransformBase.h
Tests/: CMakeLists.txt  DeformableModel1.cpp  TestAdaboostClassifer.cpp  TestComposedFitting.cpp  TestDeformSeg.cpp  TestKNNClassifer.cpp  testACVD.cpp  testDeformableSimplexMesh3DBalloonForceFilter.cpp  testDeformableSimplexMesh3DFilter.cpp  testDeformableSimplexMesh3DWithShapePriorFilter.cpp  testGeodesicActiveContourImageFilter.cpp  testGlobalConfig.cpp  testImageToImageElasticRegistration.cpp  testLib.cpp  testLib.h  testMeshToImageElasticRegistration.cpp  testNoCrossDeform.cpp  testProfileClassifer.cpp  testProfileClustering.cpp  testProfileContainer.cpp  testSSM.cpp  testTemp.cpp
Tools/: CMakeLists.txt  toolComputeMeshGeometry.cpp  toolDownsamplePolydata.cpp  toolFillBinarySliceHole.cpp  toolMeshStatistics.cpp  toolSimplexMeshAdaptTopology.cpp  toolSimplexMeshToTriangleMeshConverter.cpp  toolTriangleMeshToSimplexMeshConverter.cpp
Training/: CMakeLists.txt  kmAppearanceTraining.h  kmPoseTraining.h  kmShapeAlignmentTraining.h  kmShapeTraining.h  trainingEngineAppearance.cpp  trainingEnginePose.cpp  trainingEngineShape.cpp  trainingEngineShapeAlignment.cpp
include/AdaSegment/: AdaBoost.h  AdaLearn2.cpp  AdaSegment2.cxx  CMakeLists.txt  NonRandomResample.cxx  README  itkBox2SumImageFilter.h  util.h
include/AdaSegment/bak/: AdaLearn2D.cxx  AdaSegment.cxx
include/AdaSegment/cmake/: AdaSegmentConfig.cmake.in  UseAdaSegment.cmake.in
include/itk/: itkAdaptSimplexMesh3DFilter.hxx  itkDeformableSimplexMesh3DAdaboostClassifierForceFilter.h  itkDeformableSimplexMesh3DAdaboostClassifierForceFilter.hxx  itkDeformableSimplexMesh3DFilterWithAdaptedConfidence.h  itkDeformableSimplexMesh3DFilterWithAdaptedConfidence.hxx  itkDeformableSimplexMesh3DICPForceFilter.h  itkDeformableSimplexMesh3DKNNClassifierForceFilter.h  itkDeformableSimplexMesh3DKNNClassifierForceFilter.hxx  itkDeformableSimplexMesh3DThresholdForceFilter.h  itkDeformableSimplexMesh3DThresholdForceFilter.hxx  itkDeformableSimplexMesh3DWithShapePriorFilter.h  itkEuclideanDistanceKdTreeMultipleValuePointSetMetric.hxx  itkEuclideanDistanceMultipleValuePointMetric.h  itkMattesMutualInformationImageToImageMetricWithProbability.h  itkMattesMutualInformationImageToImageMetricWithProbability.hxx  itkMattesMutualInformationWithProbabilityImageToImageMetric.h  itkMattesMutualInformationWithProbabilityImageToImageMetric.hxx  itkMinValuePointSetToImageMetric.h  itkMinValuePointSetToImageMultipleValueMetric.hxx  itkMinimumValueImageToPointSetMetric.hxx  itkOnePlusOneEvolutionaryOptimizer2.h  itkOnePlusOneEvolutionaryOptimizer2.hxx  itkPointSetToImageMultipleValueMetric.h  itkPointSetToImageMultipleValueMetric.hxx  itkPointSetToImageMultipleValueRegistrationMethod.h  itkPointSetToImageMultipleValueRegistrationMethod.hxx  itkPointSetToPointSetSingleValueMetric.h  itkPointSetToPointSetSingleValueMetric.hxx  itkPointSetToPointSetSingleValueRegistrationMethod.h  itkPointSetToPointSetSingleValueRegistrationMethod.hxx  itkSingleValuedPointSetToPointSetMetric.h  itkStatisticsImageFilter2.h  itkStatisticsImageFilter2.hxx
include/km/: kmAlgorithm.h  kmClassifiedPointsKdTree.h  kmGlobal.h  kmGlobal.hxx  kmKNNProfileClassifier-ANN.h  kmKNNProfileClassifier-FLANN.h  kmKmeansClassifier.h  kmMath.h  kmMath.hxx  kmModelFitting.h  kmNotifierBase.h  kmProcessing.h  kmProfileClassifier.h  kmProfileClassifier.hxx  kmProfileContainer.h  kmProfileExtractor.h  kmRegistration.h  kmSSMUtils.h  kmUtility.h  kmVtkItkUtility.h
include/kmstatismo/statismo/: CommonTypes.h  ModelInfo.h
include/kmstatismo/statismo_ITK/: itkStatisticalShapeModelTransform.h
(+5 files in other folders)
