 # --------------------------------------------------------------------------
 # Library compilation
 ADD_LIBRARY(vtkSurface
 RenderWindow.cxx
 vtkDelaunay.cxx
 vtkDualMeshDisplay.cxx
 vtkOFFReader.cxx
 vtkOFFWriter.cxx
 vtkQuadricTools.cxx
 vtkRandomTriangulation.cxx
 vtkSMFReader.cxx
 vtkSurface.cxx
 vtkSurfaceBase.cxx
 vtkVolumeProperties.cxx
 vtkNeighbourhoodComputation.cxx
 vtkCurvatureMeasure.cxx
 vtkMyMinimalStandardRandomSequence.cxx
 )
TARGET_LINK_LIBRARIES(vtkSurface ${VTK_LIBRARIES})
